# cmake-tutorial

./: CMakeLists.txt  CTestConfig.cmake.txt  MinimalistConfig.h.in  README.md  main.cpp
MathFunctions/: CMakeLists.txt  MathFunctions.cpp  MathFunctions.h  makeTable.cpp  mysqrt.cpp  mysqrt.h
